src/test/deca/syntax/parser/invalid/instance_of_number.deca
// Parser test, instanceof should be followed by an IDENT not a number

{
    x instanceof 14;
}